		using child threads (ke_process_suspended_thread).
	* m2skernel.c: pipes treated again as regular files. Thanks to the suspending
		mechanism using child threads, pipes don't need special treatment.

2010-11-18
	* fs.c: new file was missing from repository.
	* signal.c: signal handler fixed. In the old handler, only the signal number and
		the return address (pointing at the return code calling syscall 'sigreturn')
		were inserted into the stack. Now, following the Linux kernel implementation,
		a standard signal handler frame is constructed before launching a signal
		handler, and the return code is inserted into a specially allocated memory
		page with execution permission, in order to avoid executable stack.
	* m2skernel.c: synchronous waits among guest threads handled completely with host
		thread 'ke_process_suspended_thread'. Now there is no need for periodical
		checks of 'ke_timer' in the main simulation loop. Variable 'ke->process_suspended_time'
		has been removed.

2010-11-20
	* memory.c, syscall.c, m2skernel.h: support for memory mappings using any type of
		file descriptor. In the previous implementation of mmap, munmap, mprotect,
		a file mapping was emulated with 'seek' and 'read' system calls. Now,
		a real host call to 'mmap' is performed, so that any file descriptor can be
		used for mappings (e.g., a device such as GPU).

2010-12-03
	* issue.c: bug fixed in the order in which LQ, SQ, and IQ were handled. Memory instructions
		are prioritized over arithmetic uops.


2010-12-03
	Version 2.4.1 Released

2010-12-06
	* syscall.c: ioctl system call simplified; first gpu implementation attempt reverted.
		Instead, an additional OpenCL system call is created, used for the implementation
		of the whole OpenCL 1.1 interface.
	* libgpukernel: library added to start the OpenCL implementation project.

2010-12-08
	* m2s-pipeline.c: warnings fixed.
	* disasm.c: warnings fixed.
	* libgpukernel: restructured, files added, OpenCL extended.
